# templategen

./: .gitignore  Makefile  README.md  README_EN.md  pyproject.toml
src/templategen/: __main__.py  build.py  cli.py  compiler.py  config.py  model.py  overrides.py  render.py  scanner.py
src/templategen.egg-info/: PKG-INFO  SOURCES.txt
src/templategen/templates/: base.tex
template_dir/: templategen.yml
template_dir/图论/: BestMatch.cpp  BlockCutTree.cpp  Draft_LCA.cpp  Flow(Jiangly).cpp  KruskallTree.cpp  LCA.cpp  MinCostFlow.cpp  NegativeRing.cpp  O(1)LCA.cpp  ShortestPath.cpp  Twosat.cpp  bitset.hpp  dcc.cpp  dinic.cpp  scc.cpp  spfa.cpp  倍增LCA.cpp
template_dir/字符串/: Hashv.cpp  kmp.cpp  manacher.cpp
template_dir/数学/: FFT(slow).cpp  Frac.cpp  bigInteger(slow).cpp  comb.cpp  exgcd.cpp  mint.cpp  primes.cpp  random.cpp  生成随机排列.cpp
template_dir/数据结构/: Chafen.cpp  DOT.cpp  DSU.cpp  DSU_on_tree.cpp  Fenwick.cpp  HLD.cpp  HashMap.cpp  Mo.cpp  ODT.cpp  RectangleSum.cpp  SparseTable.cpp  SqrtBlock.cpp  Trie.cpp  heap.cpp  pbds.cpp  二维差分.cpp
template_dir/数据结构/线段树/: FindMexOffline.cpp  LazySegTree.cpp  LazySegmentTree(jiangly).cpp  MaxiumVal.cpp  PersistanceSegTree.cpp  SegmentTree(jiangly).cpp  dfnSegTree.cpp  find_first.cpp  number_of_kth.cpp  seg_tree.cpp  shudian.cpp  二维数点.cpp  可持久求和.cpp  子树线段树.cpp  矩阵面积并.cpp  线段树上二分.cpp  线段树类.cpp
template_dir/杂项/: GraphGenerator.py  header.cpp  helper.cpp  validator.py  对拍.py  离散化数组.cpp
tests/: test_build.py  test_cli.py  test_cli_integration.py  test_config.py  test_overrides.py  test_render.py  test_scanner.py
